--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<p class="right"><br><br>My Skils</p>
 		</div>
 		<div class="txt">
-			<p>Hello My World. I would like to show my feeling about studying in Passerelles Numeriques Cambodia. Nowadays, I am very happy to study in this School. I meet new peoples new face and new everything :-D . And I am really thankful to PNC that helps me to success my goal. However my goal doesn't success yet, but PNC shows me the way. <br> And also, I meet a person that is good enuogh for me. That person is always help me about studying by alert me to <q>Try to Study</q> or do something else that make my feel never Give Up with studying, and We Help each other tobe success in the future also. </p>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus obcaecati tenetur necessitatibus, quibusdam non alias, iure, incidunt hic quisquam optio numquam suscipit enim facere aut laudantium ipsum voluptate ratione itaque.</p>
 		</div>
 		<div class="clear"></div>
 	</div>
